Move Menu to Header

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -40,12 +40,13 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
-  color:#567;
+  color:white;
   text-decoration: none;
 }
 a:active,
 a:hover {
   outline-width: 0;
+  color:rebeccapurple;
 }
 abbr[title] {
   border-bottom: none;
@@ -513,7 +514,28 @@ th {
   font-weight: bold;
 }
 li {
-  margin-bottom: calc(1.45rem / 2);
+  margin:1em;
+}
+
+.menu{
+  display:block;
+  text-align:left;
+  list-style:none;
+  margin-top:1.5em;
+  margin-right:2em;
+  float:right;
+}
+.menuItem{
+  border:1px solid black !important;
+  display:inline;
+  padding:.5em;
+  border-radius:1em;
+}
+.menuItem:hover {
+  background:white;
+}
+.menuItem:hover a{
+  color:rebeccapurple;
 }
 ol li {
   padding-left: 0;
