--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -42,11 +42,12 @@ a {
   -webkit-text-decoration-skip: objects;
   color:white;
   text-decoration: none;
+  
 }
 a:active,
 a:hover {
   outline-width: 0;
-  color:rebeccapurple;
+  color:#827676;
 }
 abbr[title] {
   border-bottom: none;
@@ -526,16 +527,15 @@ li {
   float:right;
 }
 .menuItem{
-  border:1px solid black !important;
   display:inline;
   padding:.5em;
-  border-radius:1em;
 }
 .menuItem:hover {
-  background:white;
+  background:transparent;
 }
 .menuItem:hover a{
-  color:rebeccapurple;
+  color:#827676;
+  
 }
 ol li {
   padding-left: 0;
