--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -641,8 +641,32 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+.header{
+    margin: 0 auto;
+    padding: 1.45rem 1.0875rem;
+    background: 'rebeccapurple';
+    display:flex;
+    justify-content:space-between;
+    height:100vh;
+    background:url("https://images.unsplash.com/photo-1510843572979-e4b9e790fdd7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=238526856465b28e7372a88c82ee05d5&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb");
+    background-repeat:no-repeat;
+    background-size:cover;
+}
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
+  }
+  .header{
+    margin: 0 auto;
+    padding: 1.45rem 1.0875rem;
+    background: 'rebeccapurple';
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+    height:100vh;
+    background:url("https://images.unsplash.com/photo-1510843572979-e4b9e790fdd7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=238526856465b28e7372a88c82ee05d5&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb");
+    background-repeat:no-repeat;
+    background-size:cover;
   }
 }
